Converted old version style code to ES6 style code

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
     "dev": "nodemon app"
   },
-  "author": "abhishek",
+  "author": "abhishek singh",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1053.0",
