--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1053.0",
+    "axios": "^0.27.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.2.2",
@@ -21,6 +22,7 @@
     "multer-s3": "^2.10.0",
     "random-movie-names": "^1.0.2",
     "random-words": "^1.1.2",
+    "redis": "^4.0.6",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
